--- a/style.css
+++ b/style.css
@@ -17,4 +17,12 @@ div.main #vegetable {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  div.container {
+    width: 100%;
+    height: 70vh;
+  }
+}
 /*# sourceMappingURL=style.css.map */
